--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 @import "./reset";
+@import "config/colors";
+@import "modules/flash";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
 @import "./_messages";
@@ -11,4 +13,4 @@
 @import "modules/side_bar";
 @import "modules/chat";
 @import "modules/user";
-@import "messages/messages.scss"
+@import "messages/messages.scss";
