--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,5 +12,7 @@
 @import "mixins/vendor_prefix";
 @import "modules/side_bar";
 @import "modules/chat";
+@import "modules/flash";
 @import "modules/user";
+@import "modules/group";
 @import "messages/messages.scss";
