--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,18 +1,14 @@
-@import "./reset";
-@import "config/colors";
-@import "modules/flash";
-@import "font-awesome-sprockets";
-@import "./font-awesome";
-@import "./_messages";
 @import "font-awesome";
 @import "config/colors";
-@import "config/size";
-@import "config/reset";
-@import "mixins/mixin";
-@import "mixins/vendor_prefix";
-@import "modules/side_bar";
-@import "modules/chat";
+
+
+@import "./reset";
+
+
+
 @import "modules/flash";
+
 @import "modules/user";
 @import "modules/group";
-@import "messages/messages.scss";
+
+@import "./messages.scss";
