--- a/app/views/devise/shared/_side_bar.htmi.haml
+++ b/app/views/devise/shared/_side_bar.htmi.haml
@@ -1,15 +1,14 @@
-/ ユーザー編集ページに遷移するためのパスを追加
 .side-bar
   .header
     %h3.header__name
       = current_user.name
     %ul.header__lists
       %li.list
-        = link_to do
-          = icon('fas', 'pen-square', class: 'icon')
+        = link_to new_group_path do
+          = fa_icon 'pencil-square-o', class: 'icon'
       %li.list
         = link_to edit_user_path(current_user) do
-          = icon('fas', 'cog', class: 'icon')
+          = fa_icon 'cog', class: 'icon'
   .groups
     .group
       .group__name
