--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -8,12 +8,13 @@
       Edit
 
   .messages
+    = render partial: 'message', collection: @messages
 
-  .form
-    %form.new-message
-      .input-box
-        %input{class: "text",placeholder: "type a message",type: "text"}
-        %label{class: "input-box__image"}
-          = icon('fas', 'image')
-          %input{type: "file",class:"input-box__image__file"}
-      %input{class: "submit-btn",type: "submit" ,name: "commit",value: "Send"}
+   .form
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+        .form__mask
+          = f.label :image, class: 'form__mask__image' do
+            = icon('fas', 'image', class: 'icon')
+            = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit'
