--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,17 +1,19 @@
-.side_bar
-  .side-header
-    .side-header__box
-      %p.user-name  masa
-      %ul.menu
-        %li.new-group
-        = link_to "#" do
-          =icon("fas","edit")
-        %li.edit-user
-        = link_to "#" do
-          =icon("fas","cog")
+.side-bar
+  .header
+    %h3.header__name
+      = current_user.name
+    %ul.header__lists
+      %li.list
+        = link_to new_group_path do
+          = icon('fas', 'edit', class: 'icon')
+      %li.list
+        = link_to edit_user_path(current_user) do
+          = icon('fas', 'cog', class: 'icon')
   .groups
-    = link_to "#",class:"group" do
-      %p.group-name
-        techcamp
-      %p.latest-messege
-        まだメッセージがありません
+    - current_user.groups.each do |group|
+      .group
+        = link_to group_messages_path(group) do
+          .group__name
+            = group.name
+          .group__message
+            メッセージはまだありません
