--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,6 @@
 @import "modules/user";
 @import "modules/group";
 
-@import "./messages.scss";
+@import "./messages";
 @import "modules/chat";
 @import "modules/side_bar";
