--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,14 +1,14 @@
-@import "font-awesome";
+/*  @import "font-awesome"; */
 @import "config/colors";
-@import "config/size";
-@import "config/reset";
+/*  @import "config/size";  */
+/*  @import "config/reset"; */
 @import "./reset";
-@import "mixins/mixin";
-@import "mixins/vendor_prefix";
+/*  @import "mixins/mixin"; */
+/*  @import "mixins/vendor_prefix"; */
 @import "modules/chat";
 @import "modules/flash";
 @import "modules/side_bar";
 @import "modules/user";
 @import "modules/group";
-@import "messages/messages";
+/*  @import "messages/messages";  */
 @import "./messages";
